--- a/package.json
+++ b/package.json
@@ -9,13 +9,14 @@
     "preview": "vite preview"
   },
   "devDependencies": {
-    "vite": "^5.0.0"
+    "vite": "^5.0.8"
   },
   "dependencies": {
-    "@studio-freight/lenis": "^1.0.27",
-    "animejs": "^3.2.1",
+    "@studio-freight/lenis": "^1.0.29",
+    "animejs": "^3.2.2",
     "css-houdini-squircle": "^0.3.0",
-    "gsap": "^3.12.2",
-    "sass": "^1.69.5"
+    "gsap": "^3.12.3",
+    "sass": "^1.69.5",
+    "swiper": "^11.0.5"
   }
 }
